[package]

name = "QuakeRL-Rust"
version = "0.0.1"
authors = ["Murilo Cadanus da Costa <murilocadanus@gmail.com>"]

[[bin]]
name = "quakerl"

[features]

debug = []
debug_sprite = []
debug_collider = []

[dependencies.piston]
git = "https://github.com/pistondevelopers/piston"

[dependencies.pistoncore-sdl2_window]
git = "https://github.com/pistondevelopers/sdl2_window"

[dependencies.piston2d-graphics]
git = "https://github.com/pistondevelopers/graphics"

[dependencies.piston2d-opengl_graphics]
git = "https://github.com/pistondevelopers/opengl_graphics"

