[package]

name = "QuakeRL-Rust"
version = "0.0.1"
authors = ["Murilo Cadanus da Costa <murilocadanus@gmail.com>"]

[[bin]]
name = "quakerl"

[features]

debug = ["debug_sprite", "debug_volume"]
debug_sprite = []
debug_volume = []

[dependencies.pistoncore-event]
git = "https://github.com/pistondevelopers/event"

[dependencies.pistoncore-input]
git = "https://github.com/pistondevelopers/input"

[dependencies.piston]
git = "https://github.com/pistondevelopers/piston"

[dependencies.pistoncore-sdl2_window]
git = "https://github.com/pistondevelopers/sdl2_window"

[dependencies.piston2d-graphics]
git = "https://github.com/pistondevelopers/graphics"

[dependencies.piston2d-opengl_graphics]
git = "https://github.com/pistondevelopers/opengl_graphics"

[dependencies.shader_version]
git = "https://github.com/pistondevelopers/shader_version"

[dependencies.quack]
git = "https://github.com/pistondevelopers/quack"

[dependencies.vecmath]
git = "https://github.com/pistondevelopers/vecmath"

